Updated Bible editor preferences
There are two places in advanced mode where one can see the visual
editors selected via preferences.
1. In the workspaces
2. under the translation menu

My suggestion was that the preference setting for all editors would
only apply to the options visible within workspaces. So that if the
user chose to only show the visual verse editor in Preferences, he
could still see the visual chapter editor in full screen mode under the
Translation menu.

--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -7951,7 +7951,7 @@ msgstr ""
 msgid "Enable fast Bible editor switching"
 msgstr ""
 
-msgid "Active Bible editors:"
+msgid "Available Bible editors in the menu in advanced mode:"
 msgstr ""
 
 msgid "Visual editors:"
