--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -7960,6 +7960,14 @@ msgstr ""
 msgid "USFM editors:"
 msgstr ""
 
+msgid "Downgrade the visual Bible editors:"
+msgstr ""
+
+msgid ""
+"Downgrade them on older computing devices if they do not run the current "
+"visual Bible editors."
+msgstr ""
+
 msgid "Enable the Styles button in the visual Bible editors"
 msgstr ""
 
