User setting for whether a user can use advanced mode
https://github.com/bibledit/bibledit/issues/487

--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -7417,6 +7417,9 @@ msgstr ""
 msgid "Can create and comment on consultation notes."
 msgstr ""
 
+msgid "Can use advanced mode."
+msgstr ""
+
 msgid "Go back."
 msgstr ""
 
