--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -2827,6 +2827,9 @@ msgstr ""
 msgid "The file with Bibles is ready for download."
 msgstr ""
 
+msgid "It failed to create the file with Bibles."
+msgstr ""
+
 msgid "Go back"
 msgstr ""
 
